# KeypointDetectAndroid

./: .gitignore  .gitmodules  BuildOpenCV.cmake  CMakeLists.txt  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml  native.yml
FeatureDetect/root/: BuildOpenCV.cmake  CMakeLists.txt
FeatureDetect/root/examples/: test.cpp
FeatureDetect/root/source/: CMakeLists.txt  featurelib.h
FeatureDetect/src/: BuildOpenCV.cmake  CMakeLists.txt
FeatureDetect/src/samples/: test.cpp
FeatureDetect/src/source/: CMakeLists.txt  featurelib.cpp  featurelib.h  main.cpp  main.h
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/featuredetectandroid/: Conversions.kt  FeatureDetectApp.kt  MainActivity.kt
app/src/main/java/com/github/featuredetectandroid/ui/: AppLayout.kt  GrayscaleView.kt  GrayscaleViewModel.kt  Menu.kt  OutputViewModel.kt  ViewGrayscale.kt
app/src/main/java/com/github/featuredetectandroid/utils/: GrayscaleArrayToBitmap.kt  GrayscaleByteArrayToBitmap.kt  KeypointDetectionAlgorithm.kt  KeypointExtractionAlgorithm.kt  KeypointsDrawer.kt  KeypointsToOffsetList.kt  LuminanceArrayToBitmap.kt  LuminanceArrayToRGB.kt  LuminanceConversions.kt  PhotoAnalyzer.kt  PreferencesManager.kt  RGBConversions.kt  RgbConversions.kt  SelectFeatureDetector.kt
app/src/main/java/com/github/kpdandroid/: CameraAnalysisActivity.kt  FileAnalysisActivity.kt  KeypointDetectApp.kt  MainActivity.kt
app/src/main/java/com/github/kpdandroid/ui/: AppLayout.kt  BottomMenu.kt  BottomMenuItem.kt  DetectionResultColumn.kt  ImageAnalysisViewModel.kt  KeypointPainter.kt  MainNavDestinations.kt  Menu.kt  OutputViewModel.kt  SnapshotPainter.kt  SnapshotViewModel.kt
app/src/main/java/com/github/kpdandroid/utils/: CameraHandler.kt  ImageTransformations.kt  KeypointDetectionAlgorithm.kt  PhotoAnalyzer.kt  PreferencesManager.kt  RgbConversions.kt  SnapshotAnalyzer.kt
app/src/main/java/me/alexdtat/featuredetectandroid/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
config/detekt/: detekt.yml
examples/: CMakeLists.txt  detection_example.cpp  test.cpp
gradle/wrapper/: gradle-wrapper.properties
include/: FeatureLib.h  feature_lib.h  featurelib.h
lib/: .gitignore  build.gradle  consumer-rules.pro
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: .clang-tidy  .gitignore  BuildOpenCV.cmake  CMakeLists.txt  CPPLINT.cfg  README.md
lib/src/main/cpp/examples/: CMakeLists.txt  detection_example.cpp
lib/src/main/cpp/include/: detection_result.h  feature_detector.h  keypoint_detector.h  orb_detector.h  sift_detector.h  stripped_keypoint.h  surf_detector.h
lib/src/main/cpp/src/: CMakeLists.txt  conversions.cpp  conversions.h  detection_result.cpp  feature_detector.cpp  feature_lib.cpp  keypoint_detector.cpp  logging.cpp  logging.h  orb_detector.cpp  sift_detector.cpp  stripped_keypoint.cpp  surf_detector.cpp
lib/src/main/java/com/github/featuredetectlib/: FeatureDetector.kt  KeyPoint.kt  Keypoint.kt  SuperPoint.kt
lib/src/main/java/com/github/featuredetectlib/learned/: LearnedKeypoint.kt  (+1 more)
lib/src/main/java/com/github/kpdlib/: Keypoint.kt  KeypointDetector.kt
src/: CMakeLists.txt  conversions.h  feature_lib.cpp  featurelib.cpp
utils/: .gitignore  save_for_mobile.py
(+43 files in other folders)
